# test-embeddings

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requisiti.md
docs/: Acconciatura_ed_estetica.md  Agroalimentare.md  Artigianato_artistico_e_tradizionale.md  Mestieri.md  Odontotecnici_sno.md  ambiente_sicurezza_igienedeglialimenti.md  assicurazione.md  assistenza_fiscale_e_contabilita.md  assistenza_paghe_gestione_del_personale.md  associazione.md  bandi_e_finanziamenti.md  benessere_sanita.md  caf_bonus_detrazioni.md  caf_centro_assistenza_fiscale.md  caf_imu_tasi.md  caf_isee.md  caf_modello_730.md  caf_successioni_locazioni.md  caf_tariffe_tessera.md  comunicazione_terziario_avanzato.md  contatti.md  convenzione_ali_energy_advisor.md  convenzione_alpitour_turismo_viaggi.md  convenzione_carrefour.md  convenzione_casa_radio.md  convenzione_eblart_ente_bilaterale_artigianato_lazio.md  convenzione_eltiq_welfare.md  convenzione_libra_claims_azioni_collettive.md  convenzione_link_campus_university.md  convenzione_loquis_podcast.md  convenzione_martino_legale.md  convenzione_mycna_app.md  convenzione_ornatrix_software.md  convenzione_romana_diesel.md  convenzione_scf_diritti.md  convenzione_seclan_soluzioni_tecnologiche.md  convenzione_siae_musica.md  convenzione_tt_palestra.md  convenzione_unipol_gruppo_assicurazioni_mobilita_welfare.md  convenzione_usi_assistenza_sanitaria.md  (+32 more)
src/vectorsearch/: __init__.py  cli.py  config.py  embeddings.py  indexer.py  rag.py  vectorstore.py
